<resources>
    <string name="app_name">EBS test  internship</string>
    <string name="no_connection">No Connection</string>
    <string name="item_image">item_image</string>
    <string name="item_one">Item One</string>
    <string name="item_two">Item Two</string>
    <string name="item_three">Item Three</string>
    <string name="information">INFORMATION</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add_to_favourite">Add to Favourite</string>
</resources>