<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_image2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/item_image" />

    <TextView
        android:id="@+id/item_title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/item_image2"
        app:layout_constraintStart_toStartOf="@+id/item_image2"
        app:layout_constraintTop_toBottomOf="@+id/item_image2" />

    <TextView
        android:id="@+id/item_price2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/item_title2"
        app:layout_constraintStart_toStartOf="@+id/item_title2"
        app:layout_constraintTop_toBottomOf="@+id/item_title2" />

    <View
        android:id="@+id/horizontal_line2"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/item_price2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_price2" />

    <TextView
        android:id="@+id/info_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/information"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/item_price2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/item_price2"
        app:layout_constraintTop_toBottomOf="@+id/add_to_fav_textView" />

    <TextView
        android:id="@+id/item_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/info_textView"
        app:layout_constraintStart_toStartOf="@+id/info_textView"
        app:layout_constraintTop_toBottomOf="@+id/info_textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:background="#383A97"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_details"
        app:layout_constraintTop_toBottomOf="@+id/item_details" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:background="#9549B1"
        android:text="@string/buy_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/item_details" />

    <TextView
        android:id="@+id/add_to_fav_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/add_to_favourite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/add_to_fav_button"
        app:layout_constraintStart_toStartOf="@+id/item_price2"
        app:layout_constraintTop_toBottomOf="@+id/item_price2" />

    <Button
        android:id="@+id/add_to_fav_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_red_favorite_24"
        app:layout_constraintEnd_toEndOf="@+id/item_price2"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line2" />

</androidx.constraintlayout.widget.ConstraintLayout>